--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   get: ^4.5.1
   intl: ^0.17.0
   flutter_multi_formatter: ^2.4.4
+  firebase_auth:
+  firebase_database:
 
 dev_dependencies:
   flutter_test:
