Criando provider e implementando login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app_financeiro
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
+# The following line prevents the packages from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -33,6 +33,10 @@ dependencies:
   flutter_multi_formatter: ^2.4.4
   firebase_auth:
   firebase_database:
+  firebase:
+  firebase_core:
+  google_sign_in:
+  sign_button: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +60,7 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # For details regarding adding assets from package dependencies, see
+  # For details regarding adding assets from packages dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
@@ -76,5 +80,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies,
+  # For details regarding fonts from packages dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
