--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   firebase_database:
   firebase_core:
   google_sign_in:
-  sign_button: ^2.0.2
   animated_text_kit: ^4.2.1
   flutter_login: ^3.0.0
   font_awesome_flutter: ^9.2.0
@@ -58,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/foguete.png
+    - assets/images/error404.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
