--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_text_kit: ^4.2.1
   flutter_login: ^3.0.0
   font_awesome_flutter: ^9.2.0
+  uuid: ^3.0.5
+  circular_menu: ^1.2.3
 
 dev_dependencies:
   flutter_test:
