--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,15 @@ dependencies:
   get: ^4.5.1
   intl: ^0.17.0
   flutter_multi_formatter: ^2.4.4
-  firebase_auth:
+  firebase_auth: ^3.3.3
   firebase_database:
   firebase_core:
-  google_sign_in:
+  firebase:
   animated_text_kit: ^4.2.1
   flutter_login: ^3.0.0
   font_awesome_flutter: ^9.2.0
   uuid: ^3.0.5
+  google_sign_in: ^5.2.1
   circular_menu: ^1.2.3
 
 dev_dependencies:
