--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,11 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   google_sign_in: ^5.2.1
   circular_menu: ^1.2.3
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.2
-
 flutter_icons:
   android: true
   ios: true
